manifests/app/newswaters/search-engine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-engine
  labels:
    app: search-engine
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: search-engine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: search-engine
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: search-engine
          image: metalwhaledev/newswaters-search-engine:0.1.0
          imagePullPolicy: Always
          command:
            - newswaters-search-engine
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
        - name: search-engine-vector
          image: qdrant/qdrant:v1.6.1
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /qdrant/storage
              name: vector-storage
      volumes:
        - name: vector-storage
          persistentVolumeClaim:
            claimName: search-engine-vector-storage
---
apiVersion: v1
kind: Service
metadata:
  name: search-engine
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: search-engine
