manifests/app/newswaters/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beach
  labels:
    app: beach
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: beach
  template:
    metadata:
      labels:
        app: beach
    spec:
      containers:
        - name: beach
          image: ubuntu:22.04
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          stdin: true
          tty: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference
  labels:
    app: inference
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: inference
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: inference
          image: metalwhaledev/newswaters-inference:0.1.1
          imagePullPolicy: Always
          command:
            - newswaters-inference
          resources:
            limits:
              memory: "12Gi"
              cpu: "4000m"
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 30
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: inference
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: inference
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: api
          image: metalwhaledev/newswaters-api:0.1.0
          imagePullPolicy: Always
          command:
            - newswaters-api
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          # See: https://kubernetes.github.io/ingress-nginx/examples/rewrite/#rewrite-target
          - path: /newswaters-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
